# Assignment3_Aromal_gigi

./: .dockerignore  Deployment.md  Dockerfile  README.md  pyproject.toml  requirements.txt  train.py
app/: main.py
app/data/: metadata.json  model.json
tests/: test_api.py
